<resources>
    <string name="app_name">One2Cook</string>
    <string name="app_name_in_fragment">One2cook</string>
    <string name="make_delicious">make delicious</string>
    <string name="hint_search_line">What would you like to cook?</string>
    <string name="search_button">search</string>
    <string name="magnifying_glass">magnifying glass</string>
    <string name="search_line">search line</string>
    <string name="image_item_list">image</string>
    <string name="title_dishes">Title dishes</string>
    <string name="total_time_cooking">Total Time Cooking</string>
    <string name="bar_list_item">Bar</string>
    <string name="image_timer">image timer</string>
    <string name="cooking_time">Cooking time: %1$s</string>
    <string name="calories">Calories: %1$s</string>
    <string name="dish_image">dish image</string>
    <string name="ingredients">Ingredients:</string>
    <string name="source">Directions here: %1$s</string>
    <string name="yield">Yield: %1$s</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="go_to_favorites">Go to favorites</string>
    <string name="back_button">back button</string>
</resources>