<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FAC6C01">

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dish_image" />

    <TextView
        android:id="@+id/recipeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/title_dishes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/recipeImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cuisineTypeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/cuisine_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView" />

    <TextView
        android:id="@+id/cookingTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/cooking_time"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cuisineTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView" />

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/calories"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cookingTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/ingredients"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuisineTypeTextView" />

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/ingredients"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients" />

    <TextView
        android:id="@+id/sourceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>